syntax = "proto3";
package tendermint.p2p;

message ProtocolVersion {
  uint64 p2p   = 1;
  uint64 block = 2;
  uint64 app   = 3;
}

message NodeInfo {
  ProtocolVersion protocol_version = 1;
  string          node_id          = 2;
  string          listen_addr      = 3;
  string          network          = 4;
  string          version          = 5;
  bytes           channels         = 6;
  string          moniker         = 7;
  NodeInfoOther   other           = 8;
}

message NodeInfoOther {
  string tx_index    = 1;
  string rpc_address = 2;
}